--- a/index.html
+++ b/index.html
@@ -17,16 +17,30 @@
       color: #ccffcc;
       font-size: 14px;
     }
+    button {
+      margin-top: 10px;
+      padding: 8px 16px;
+      font-weight: bold;
+      background-color: #00cc00;
+      border: none;
+      color: black;
+      cursor: pointer;
+    }
+    #connectWalletBtn {
+      background-color: #00ff88;
+    }
   </style>
 </head>
 <body>
   <h2>Atomic Arbitrage Simulator</h2>
+  <button id="connectWalletBtn" onclick="connectWallet()">🔌 Connect Wallet</button><br><br>
   <label>Trade Amount (USDC): <input type="number" id="amount" value="10"></label><br>
   <label>Minimum Profit (USDC): <input type="number" id="minProfit" value="0.1"></label><br>
   <label>Slippage %: <input type="number" id="slippage" value="0.05"></label><br>
   <div>Wallet USDC Balance: <span id="balance">0</span> USDC</div>
-  <button onclick="startScan()">Start Scanning</button>
+  <button onclick="startScan()">▶️ Start Scanning</button>
   <textarea id="log"></textarea>
+
   <script>
     const provider = new ethers.providers.Web3Provider(window.ethereum);
     let signer;
@@ -156,17 +170,36 @@
       aave: "0xD6DF932A45C0f255f85145f286eA0b292B21C90B"
     };
 
+    async function connectWallet() {
+      try {
+        await provider.send("eth_requestAccounts", []);
+        signer = provider.getSigner();
+        const userAddress = await signer.getAddress();
+        log(`🔗 Connected: ${userAddress}`);
+        updateBalance();
+        contract = new ethers.Contract(contractAddress, contractAbi, signer);
+      } catch (err) {
+        log("❌ Wallet connection failed: " + err.message);
+      }
+    }
+
     async function updateBalance() {
-      const usdc = new ethers.Contract(tokens.usdc, ["function balanceOf(address) view returns (uint256)"], provider);
-      const address = await signer.getAddress();
-      const balance = await usdc.balanceOf(address);
-      document.getElementById("balance").textContent = ethers.utils.formatUnits(balance, 6);
+      try {
+        const usdc = new ethers.Contract(tokens.usdc, ["function balanceOf(address) view returns (uint256)"], provider);
+        const address = await signer.getAddress();
+        const balance = await usdc.balanceOf(address);
+        document.getElementById("balance").textContent = ethers.utils.formatUnits(balance, 6);
+      } catch (err) {
+        log("⚠️ Error fetching balance: " + err.message);
+      }
     }
 
     async function startScan() {
-      await provider.send("eth_requestAccounts", []);
-      signer = provider.getSigner();
-      contract = new ethers.Contract(contractAddress, contractAbi, signer);
+      if (!signer) {
+        log("⚠️ Please connect your wallet first.");
+        return;
+      }
+
       updateBalance();
 
       setInterval(async () => {
@@ -182,15 +215,17 @@
               const tokenIn = tokens["usdc"];
 
               try {
-                const amountsOut1 = await new ethers.Contract(router1, ["function getAmountsOut(uint, address[]) view returns (uint[] memory)"] , provider).getAmountsOut(amountIn, [tokenIn, tokenOut]);
+                const router1Contract = new ethers.Contract(router1, ["function getAmountsOut(uint, address[]) view returns (uint[])"], provider);
+                const router2Contract = new ethers.Contract(router2, ["function getAmountsOut(uint, address[]) view returns (uint[])"], provider);
+
+                const amountsOut1 = await router1Contract.getAmountsOut(amountIn, [tokenIn, tokenOut]);
                 const tokenAmount = amountsOut1[1];
 
-                const amountsOut2 = await new ethers.Contract(router2, ["function getAmountsOut(uint, address[]) view returns (uint[] memory)"] , provider).getAmountsOut(tokenAmount, [tokenOut, tokenIn]);
-
+                const amountsOut2 = await router2Contract.getAmountsOut(tokenAmount, [tokenOut, tokenIn]);
                 const finalAmount = amountsOut2[1];
                 const profit = finalAmount.sub(amountIn);
 
-                log(`Checking ${tokenSymbol.toUpperCase()} via ${router1.slice(0,6)} → ${router2.slice(0,6)} | Est. Profit: ${ethers.utils.formatUnits(profit, 6)} USDC`);
+                log(`🔍 ${tokenSymbol.toUpperCase()} ${router1.slice(0,6)} → ${router2.slice(0,6)} | Est. Profit: ${ethers.utils.formatUnits(profit, 6)} USDC`);
 
                 if (profit.gt(minProfit)) {
                   log(`🚀 Executing arbitrage for ${tokenSymbol.toUpperCase()}...`);
