--- a/index.html
+++ b/index.html
@@ -17,142 +17,174 @@
       color: #ccffcc;
       font-size: 14px;
     }
-    button {
-      margin-top: 10px;
-      padding: 8px 16px;
-      font-weight: bold;
-      background-color: #00cc00;
-      border: none;
+    #connectBtn {
+      background: #00cc00;
       color: black;
+      padding: 10px;
+      font-weight: bold;
+      border: none;
       cursor: pointer;
-    }
-    #connectWalletBtn {
-      background-color: #00ff88;
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
   <h2>Atomic Arbitrage Simulator</h2>
-  <button id="connectWalletBtn" onclick="connectWallet()">🔌 Connect Wallet</button>
-  <button onclick="window.location.href='https://metamask.app.link/dapp/fclmail.github.io/pr4/'">📱 Deep Link (Mobile)</button><br><br>
 
-  <div>Wallet Address: <span id="wallet">Not connected</span></div>
-  <div>Wallet USDC Balance: <span id="balance">0</span> USDC</div>
+  <button id="connectBtn">🔗 Connect Wallet</button>
 
   <label>Trade Amount (USDC): <input type="number" id="amount" value="10"></label><br>
   <label>Minimum Profit (USDC): <input type="number" id="minProfit" value="0.1"></label><br>
   <label>Slippage %: <input type="number" id="slippage" value="0.05"></label><br>
-
-  <button onclick="startScan()">▶️ Start Scanning</button>
+  <div>Wallet USDC Balance: <span id="balance">0</span> USDC</div>
+  <button onclick="startScan()">Start Scanning</button>
   <textarea id="log"></textarea>
 
   <script>
-    window.onload = () => {
-      const provider = new ethers.providers.Web3Provider(window.ethereum);
-      let signer;
-      let contract;
+    let provider, signer, contract;
 
-      const contractAddress = "0x98BD86aDa64DC52E60392a43050fad5E9cAcb62F";
-      const contractAbi = [/* CONTRACT ABI TRUNCATED FOR BREVITY – keep your ABI here */];
+    const contractAddress = "0x98BD86aDa64DC52E60392a43050fad5E9cAcb62F";
+    const contractAbi = [/* ... your contract ABI ... */{
+		"inputs": [],
+		"stateMutability": "nonpayable",
+		"type": "constructor"
+	},
+	{
+		"anonymous": false,
+		"inputs": [
+			{ "indexed": false, "internalType": "address", "name": "tokenIn", "type": "address" },
+			{ "indexed": false, "internalType": "address", "name": "tokenOut", "type": "address" },
+			{ "indexed": false, "internalType": "uint256", "name": "inputAmount", "type": "uint256" },
+			{ "indexed": false, "internalType": "uint256", "name": "outputAmount", "type": "uint256" },
+			{ "indexed": false, "internalType": "uint256", "name": "profit", "type": "uint256" }
+		],
+		"name": "ArbitrageExecuted",
+		"type": "event"
+	},
+	{
+		"inputs": [
+			{ "internalType": "address", "name": "router1", "type": "address" },
+			{ "internalType": "address", "name": "router2", "type": "address" },
+			{ "internalType": "address", "name": "tokenIn", "type": "address" },
+			{ "internalType": "address", "name": "tokenOut", "type": "address" },
+			{ "internalType": "uint256", "name": "amountIn", "type": "uint256" },
+			{ "internalType": "uint256", "name": "minProfit", "type": "uint256" }
+		],
+		"name": "executeArbitrage",
+		"outputs": [],
+		"stateMutability": "nonpayable",
+		"type": "function"
+	},
+	{
+		"inputs": [
+			{ "internalType": "address", "name": "token", "type": "address" }
+		],
+		"name": "withdrawToken",
+		"outputs": [],
+		"stateMutability": "nonpayable",
+		"type": "function"
+	},
+	{
+		"inputs": [],
+		"name": "owner",
+		"outputs": [{ "internalType": "address", "name": "", "type": "address" }],
+		"stateMutability": "view",
+		"type": "function"
+	}
+];
 
-      const routers = {
-        quickswap: "0xa5E0829CaCEd8fFDD4De3c43696c57F7D7A678ff",
-        sushiswap: "0x1b02da8cb0d097eb8d57a175b88c7d8b47997506",
-        dfyn: "0xA102072A4C07F06EC3B4900FDC4C7B80b6c57429"
-      };
+    const routers = {
+      quickswap: "0xa5E0829CaCEd8fFDD4De3c43696c57F7D7A678ff",
+      sushiswap: "0x1b02da8cb0d097eb8d57a175b88c7d8b47997506",
+      dfyn: "0xA102072A4C07F06EC3B4900FDC4C7B80b6c57429"
+    };
 
-      const tokens = {
-        usdc: "0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174",
-        dai: "0x8f3Cf7ad23Cd3CaDbD9735AFf958023239c6A063",
-        weth: "0x7ceB23fD6bC0adD59E62ac25578270cFf1b9f619",
-        wbtc: "0x1BFD67037B42Cf73acF2047067bd4F2C47D9BfD6",
-        aave: "0xD6DF932A45C0f255f85145f286eA0b292B21C90B"
-      };
+    const tokens = {
+      usdc: "0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174",
+      dai: "0x8f3Cf7ad23Cd3CaDbD9735AFf958023239c6A063",
+      weth: "0x7ceB23fD6bC0adD59E62ac25578270cFf1b9f619",
+      wbtc: "0x1BFD67037B42Cf73acF2047067bd4F2C47D9BfD6",
+      aave: "0xD6DF932A45C0f255f85145f286eA0b292B21C90B"
+    };
 
-      async function connectWallet() {
-        try {
-          await provider.send("eth_requestAccounts", []);
-          signer = provider.getSigner();
-          const address = await signer.getAddress();
-          document.getElementById("wallet").textContent = address;
-          log(`🔗 Connected: ${address}`);
-          await updateBalance();
-          contract = new ethers.Contract(contractAddress, contractAbi, signer);
-        } catch (err) {
-          log("❌ Wallet connection failed: " + err.message);
-        }
+    async function updateBalance() {
+      if (!signer) return;
+      const usdc = new ethers.Contract(tokens.usdc, ["function balanceOf(address) view returns (uint256)"], provider);
+      const address = await signer.getAddress();
+      const balance = await usdc.balanceOf(address);
+      document.getElementById("balance").textContent = ethers.utils.formatUnits(balance, 6);
+    }
+
+    async function startScan() {
+      if (!signer) {
+        log("Wallet not connected");
+        return;
       }
 
-      async function updateBalance() {
-        try {
-          const usdc = new ethers.Contract(tokens.usdc, ["function balanceOf(address) view returns (uint256)"], provider);
-          const address = await signer.getAddress();
-          const balance = await usdc.balanceOf(address);
-          document.getElementById("balance").textContent = ethers.utils.formatUnits(balance, 6);
-        } catch (err) {
-          log("⚠️ Error fetching balance: " + err.message);
-        }
-      }
-
-      async function startScan() {
-        if (!signer) {
-          log("⚠️ Please connect your wallet first.");
-          return;
-        }
-
+      updateBalance();
+      setInterval(async () => {
         updateBalance();
+        const amountIn = ethers.utils.parseUnits(document.getElementById("amount").value, 6);
+        const minProfit = ethers.utils.parseUnits(document.getElementById("minProfit").value, 6);
 
-        setInterval(async () => {
-          updateBalance();
-          const amountIn = ethers.utils.parseUnits(document.getElementById("amount").value, 6);
-          const minProfit = ethers.utils.parseUnits(document.getElementById("minProfit").value, 6);
+        for (const tokenSymbol of ["dai", "weth", "wbtc", "aave"]) {
+          for (const router1 of Object.values(routers)) {
+            for (const router2 of Object.values(routers)) {
+              if (router1 === router2) continue;
+              const tokenOut = tokens[tokenSymbol];
+              const tokenIn = tokens["usdc"];
 
-          for (const tokenSymbol of ["dai", "weth", "wbtc", "aave"]) {
-            for (const router1 of Object.values(routers)) {
-              for (const router2 of Object.values(routers)) {
-                if (router1 === router2) continue;
-                const tokenOut = tokens[tokenSymbol];
-                const tokenIn = tokens["usdc"];
+              try {
+                const amountsOut1 = await new ethers.Contract(router1, ["function getAmountsOut(uint, address[]) view returns (uint[] memory)"], provider).getAmountsOut(amountIn, [tokenIn, tokenOut]);
+                const tokenAmount = amountsOut1[1];
+                const amountsOut2 = await new ethers.Contract(router2, ["function getAmountsOut(uint, address[]) view returns (uint[] memory)"], provider).getAmountsOut(tokenAmount, [tokenOut, tokenIn]);
+                const finalAmount = amountsOut2[1];
+                const profit = finalAmount.sub(amountIn);
 
-                try {
-                  const router1Contract = new ethers.Contract(router1, ["function getAmountsOut(uint, address[]) view returns (uint[])"], provider);
-                  const router2Contract = new ethers.Contract(router2, ["function getAmountsOut(uint, address[]) view returns (uint[])"], provider);
+                log(`Checking ${tokenSymbol.toUpperCase()} via ${router1.slice(0, 6)} → ${router2.slice(0, 6)} | Est. Profit: ${ethers.utils.formatUnits(profit, 6)} USDC`);
 
-                  const amountsOut1 = await router1Contract.getAmountsOut(amountIn, [tokenIn, tokenOut]);
-                  const tokenAmount = amountsOut1[1];
-
-                  const amountsOut2 = await router2Contract.getAmountsOut(tokenAmount, [tokenOut, tokenIn]);
-                  const finalAmount = amountsOut2[1];
-                  const profit = finalAmount.sub(amountIn);
-
-                  log(`🔍 ${tokenSymbol.toUpperCase()} ${router1.slice(0,6)} → ${router2.slice(0,6)} | Est. Profit: ${ethers.utils.formatUnits(profit, 6)} USDC`);
-
-                  if (profit.gt(minProfit)) {
-                    log(`🚀 Executing arbitrage for ${tokenSymbol.toUpperCase()}...`);
-                    const tx = await contract.executeArbitrage(router1, router2, tokenIn, tokenOut, amountIn, minProfit);
-                    const receipt = await tx.wait();
-                    log(`✅ Success! Tx: ${receipt.transactionHash}`);
-                    updateBalance();
-                  }
-                } catch (e) {
-                  log(`⚠️ Error: ${e.message}`);
+                if (profit.gt(minProfit)) {
+                  log(`🚀 Executing arbitrage for ${tokenSymbol.toUpperCase()}...`);
+                  const tx = await contract.executeArbitrage(router1, router2, tokenIn, tokenOut, amountIn, minProfit);
+                  const receipt = await tx.wait();
+                  log(`✅ Success! Tx: ${receipt.transactionHash}`);
+                  updateBalance();
                 }
+              } catch (e) {
+                log(`⚠️ Error: ${e.message}`);
               }
             }
           }
-        }, 10000);
-      }
+        }
+      }, 10000);
+    }
 
-      function log(msg) {
-        const logBox = document.getElementById("log");
-        logBox.value += `[${new Date().toLocaleTimeString()}] ${msg}\n`;
-        logBox.scrollTop = logBox.scrollHeight;
-      }
+    function log(msg) {
+      const logBox = document.getElementById("log");
+      logBox.value += `[${new Date().toLocaleTimeString()}] ${msg}\n`;
+      logBox.scrollTop = logBox.scrollHeight;
+    }
 
-      window.connectWallet = connectWallet;
-      window.startScan = startScan;
+    // 🔌 Connect Wallet + Redirect Logic
+    document.getElementById("connectBtn").onclick = async () => {
+      if (typeof window.ethereum !== "undefined") {
+        try {
+          await window.ethereum.request({ method: 'eth_requestAccounts' });
+          provider = new ethers.providers.Web3Provider(window.ethereum);
+          signer = provider.getSigner();
+          contract = new ethers.Contract(contractAddress, contractAbi, signer);
+          updateBalance();
+          window.location.href = "https://fclmail.github.io/block4/";
+        } catch (err) {
+          alert("Connection rejected.");
+          console.error("❌ Wallet connection failed:", err);
+        }
+      } else {
+        window.location.href = "https://metamask.io/download.html";
+      }
     };
   </script>
 </body>
 </html>
+
 
